# mcp-time-server

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  mcp_config.json  pyproject.toml  requirements.txt  test_server.py
src/mcp_time_server/: __init__.py  server.py
